testsuite/bsc.verilog/noinline/NoInline_ResNotInBits.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling NoInline_ResNotInBits.bsv
Error: "NoInline_ResNotInBits.bsv", line 4, column 12: (T0043)
  Cannot synthesize `module_fnNoInline_ResNotInBits­': The interface method
  `fnNoInline_ResNotInBits' uses type(s) that are not in the Bits or
  SplitPorts typeclasses: NoInline_ResNotInBits::L
Error: "NoInline_ResNotInBits.bsv", line 4, column 12: (T0043)
  Cannot synthesize this module or function: The interface method
  `fnNoInline_ResNotInBits' uses type(s) that are not in the Bits or
  SplitPorts typeclasses:
Error: "NoInline_ResNotInBits.bsv", line 4, column 12: (T0043)
  Cannot synthesize this module or function: The interface method
  `fnNoInline_ResNotInBits' uses type(s) that are not in the Bits or
  SplitPorts typeclasses: NoInline_ResNotInBits::L
